<resources>
    <string name="app_name">PITSOS</string>
    <string name="power" />
    <string name="mes">ΚΑΤΑΣΤΑΣΗ ΠΛΥΝΤΗΡΙΟΥ:                ΚΛΕΙΣΤΟ</string>
    <string name="com">ΕΝΕΡΓΟΠΟΙΗΣΗ
        ΠΛΥΝΤΗΡΙΟΥ</string>
    <string name="wel">ΚΑΛΩΣ ΗΡΘΑΤΕ</string>
    <string name="info">ΠΛΗΡΟΦΟΡΙΕΣ</string>
    <string name="quest">TODO</string>
    <string name="washer">TODO</string>
    <string name="title_activity_step1">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title2">ΒΗΜΑ 2</string>
    <string name="mes2">Προσθέστε την απαραίτητη ποσότητα απορρυπαντικού και μαλακτικού</string>
    <string name="nextbtn2"><![CDATA[ΕΠΟΜΕΝΟ -->]]></string>
    <string name="name1">ΣΚΟΥΡΟΧΡΟΜΑ</string>
    <string name="dark">ΣΚΟΥΡΟΧΡΩΜΑ</string>
    <string name="ready_mes">Η πλύση είναι έτοιμη να ξεκινήσει.</string>
    <string name="startNow">Έναρξη τώρα</string>
    <string name="StartLater">εναρξη σε...</string>
    <string name="todo">TODO</string>
    <string name="cancel">ακυρωση</string>
    <string name="one">ΒΗΜΑ 1</string>
    <string name="hello">hello word</string>
    <string name="infoText">

Όταν βάζουμε τα ρούχα μας για πλύσιμο χρησιμοποιούμε συνήθως 3 θερμοκρασίες.\n\n
Τα σκούρα ρούχα τα πλένουμε στους 40°C, τα χρωματιστά στους 30°C και τέλος τα λευκά στους 60°C.\n\n
        Ποια ρούχα πλένονται στους 30 °C; \n\n
        Αυτή η θερμοκρασία είναι αρκετά ήπια, φιλική προς τα ρούχα σου όσο αλλά και το περιβάλλον.
        Χρειάζεται μικρότερη κατανάλωση ενέργειας αλλά και νερού, γι αυτό και σου εξοικονομεί πολλά χρήματα.
        Προτίμησε τα αντίστοιχα προγράμματα πλυντηρίου ρούχων για ρούχα όπως αθλητικά, ευαίσθητα, τζιν, κοντομάνικα μπλουζάκια, σκούρα και χρωματιστά.
        Η χαμηλή θερμοκρασία θα βοηθήσει να κρατήσουν περισσότερο και να μη ξεβάφουν τα ρούχα σου.\n\n

Ποια ρούχα πλένονται στους 40 °C; \n\n
Οι 40 βαθμοί είναι ιδανική θερμοκρασία για να πλένεις τα σεντόνια, τις πετσέτες και άλλα ρούχα του σπιτιού φτιαγμένα από 100% βαμβάκι.
        Επιπλέον μπορείς να τους προτιμήσεις για ρούχα με επίμονους λεκέδες, έχοντας τοποθετήσει προηγουμένως, τοπικά, λίγο απορρυπαντικό.\n\n

Ποια ρούχα πλένονται στους 60 °C; \n\n
Όσο υψηλότερη είναι η θερμοκρασία πλύσης, τόσο υψηλότερη είναι η αποστείρωση και ο αποτελεσματικός καθαρισμός των λεκέδων.
        Τα προγράμματα πλυντηρίου ρούχων με θερμοκρασία 60 βαθμών σου προσφέρουν άψογη καθαριότητα αλλά και αποστείρωση.
        Επίλεξέ τα για λευκά, χρωματιστά ρούχα που δε ξεβάφουν και εσώρουχα.
</string>

    <string-array name="array_temp">
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>60</item>
        <item>90</item>
    </string-array>

    <string-array name="array_turns">
        <item>400</item>
        <item>600</item>
        <item>800</item>
        <item>1000</item>
        <item>1200</item>
    </string-array>
</resources>