<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".PowerOnActivity">

    <ImageButton
        android:id="@+id/btnCircle"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="166dp"
        android:layout_marginLeft="166dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="317dp"
        android:background="@drawable/btn_background"
        android:contentDescription="@string/power"
        android:scaleType="centerInside"
        android:src="@drawable/power_btn2" />


    <TextView
        android:id="@+id/text"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="257dp"
        android:text="@string/com"
        android:textColor="#120F0F"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/state"
        android:layout_width="408dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="3dp"
        android:text="@string/mes"
        android:textColor="#120F0F"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>