<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:text="ΠΛΥΣΙΜΟ ΡΟΥΧΩΝ"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="33dp"
        android:text="ΠΛΗΡΟΦΟΡΙΕΣ"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="33dp"
        android:text="@string/wel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="131dp"
        android:layout_height="107dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/washer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wash" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="159dp"
        android:layout_height="134dp"
        android:contentDescription="@string/quest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        app:srcCompat="@drawable/__removebg_preview__1_" />

    <ImageView
        android:id="@+id/tshirt_icon"
        android:layout_width="131dp"
        android:layout_height="120dp"
        android:contentDescription="tshirt_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441"
        app:srcCompat="@drawable/shirt2_removebg_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>